# EBMC 5.10

* cast properties given with -p to Boolean if need be
* SystemVerilog: recursive module definitions

# EBMC 5.9

* Verilog: use top-level module for verification, instead of "main"
* Verilog: fix for four-valued | and &
* Verilog: fix for typed parameter ports
* Verilog: fix for the type of implicit nets for continous assignments
* Verilog: fix for assignments to 1-bit types
* SystemVerilog: fix for type parameters
* SystemVerilog: type parameter ports
* SystemVerilog: fix for checkers with multiple ports
* SystemVerilog: for loops with multiple initializations
* SystemVerilog: for loops with variable declarations
* SMV: word constants
* SMV: IVAR declarations
* SMV: bit selection operator
* SMV: integer range expressions

# EBMC 5.8

* AIG/netlist engine: fix for conversion of extract bits operator
* Verilog: semantic fix for output register ports
* SystemVerilog: cover sequence
* SystemVerilog: labeled immediate assert/assume/cover statements
* SystemVerilog: semantics fix for explicit casts

# EBMC 5.7

* Verilog: --initial-zero changes the default value from nondet to zero
* Verilog: `elsif preprocessor directive
* Verilog: fix for named generate blocks
* Verilog: $onehot and $onehot0 are now elaboration-time constant
* Verilog: $isunknown
* Verilog: fix for semantics of assignment contexts
* SystemVerilog: fix for #-# and #=# for empty matches
* SystemVerilog: fix for |-> and |=> for empty matches
* SystemVerilog: ref module port direction
* LTL/SVA to Buechi with --buechi
* SMV: abs, bool, count, max, min, toint, word1
* BMC: new encoding for F, avoiding spurious traces
* EBMC: verification results now have "result" verbosity level
* Soundness fix for combination of $past and k-induction

# EBMC 5.6

* SystemVerilog: [*] and [+] SVA operators
* SystemVerilog: typedefs from package scopes
* SystemVerilog: assignment patterns with keys for structs
* SystemVerilog: unbased unsigned literals '0, '1, 'x, 'z
* SystemVerilog: first_match