@@ -2,6 +2,7 @@
 
 * cast properties given with -p to Boolean if need be
 * SystemVerilog: recursive module definitions
+* SystemVerilog: typdefs in compilation-unit scope
 
 # EBMC 5.9
 
